--- a/src/main/resources/templates/panel.html
+++ b/src/main/resources/templates/panel.html
@@ -8,9 +8,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+
     <style>
         body {
             color: #566787;
@@ -41,16 +43,16 @@
             font-size: 24px;
         }
         .table-title .btn {
-            color: #566787;
-            float: right;
-            font-size: 13px;
-            background: #fff;
+            color: white;
+            background: red;
             border: none;
             min-width: 50px;
             border-radius: 2px;
             border: none;
             outline: none !important;
             margin-left: 10px;
+            font-size: 16px;
+
         }
         .table-title .btn:hover, .table-title .btn:focus {
             color: #566787;
@@ -58,7 +60,7 @@
         }
         .table-title .btn i {
             float: left;
-            font-size: 21px;
+            font-size: 16px;
             margin-right: 5px;
         }
         .table-title .btn span {
@@ -183,22 +185,22 @@
     <div class="table-responsive">
         <div class="table-wrapper">
             <form th:action="@{/block}"  th:object="${userObj}" method="POST">
-            <div class="table-title">
-                <div class="row">
-                    <div class="col-sm-5">
-                        <h2>User <b>Management</b></h2>
-                    </div>
-                    <div class="col-sm-7">
-                        <a href="#" class="btn btn-secondary"><i class="material-icons">&#xE147;</i> <span>BLOCK</span></a>
-                        <a href="#" class="btn btn-secondary"><i class="material-icons">&#xE24D;</i> <span>UNBLOCK</span></a>
-                    </div>
-                    <div class="field">
-                        <button class="ui button" type="submit" value="lock" name="lock">Blokuj</button>
-                        <button class="ui button" type="submit" value="activate" name="activate">Aktywuj</button>
-                        <button class="ui button" type="submit" value="delete" name="delete">Usun</button>
+                <div class="table-title">
+                    <div class="container">
+                        <div class="row text-center" >
+                            <div class="col-sm">
+                                <button class="btn btn-secondary" type="submit" value="lock" name="lock"; >Block</button>
+                            </div>
+                            <div class="col-sm">
+                                <button class="btn btn-secondary" type="submit" value="activate" name="activate" style="background-color: #299be4; border: none";><i class="bi bi-unlock"></i></button>
+                            </div>
+                            <div class="col-sm">
+                                <button class="btn btn-secondary" type="submit" value="delete" name="delete" style="background-color: #299be4; border: none"; ><i class="bi bi-trash"></i></button>
+                            </div>
+                        </div>
                     </div>
                 </div>
-            </div>
+
             <table class="table table-striped table-hover">
                 <thead>
                 <tr>
@@ -218,25 +220,13 @@
                     <td><p th:text="${user.id}"></td>
                     <td><p th:text="${user.username}"></a></td>
                     <td><p th:text="${user.email}"</td>
-                    <td><p th:text="${user.last_login_time}"</td>
-                    <td><p th:text="${user.registration_time}"</td>
+                    <td><p th:text="${#dates.format(user.last_login_time, 'dd-MM-yyyy HH:mm')}"</td>
+                    <td><p th:text="${#dates.format(user.registration_time, 'dd-MM-yyyy HH:mm')}"</td>
                     <td th:if="${user.status}"><span class="status text-success">&bull;<span></td>
                     <td th:if="${user.status==false}"><span class="status text-danger">&bull;<span></td>
                 </tr>
                 </tbody>
             </table>
-            <!--<div class="clearfix">
-                <div class="hint-text">Showing <b>5</b> out of <b>25</b> entries</div>
-                <ul class="pagination">
-                    <li class="page-item disabled"><a href="#">Previous</a></li>
-                    <li class="page-item"><a href="#" class="page-link">1</a></li>
-                    <li class="page-item"><a href="#" class="page-link">2</a></li>
-                    <li class="page-item active"><a href="#" class="page-link">3</a></li>
-                    <li class="page-item"><a href="#" class="page-link">4</a></li>
-                    <li class="page-item"><a href="#" class="page-link">5</a></li>
-                    <li class="page-item"><a href="#" class="page-link">Next</a></li>
-                </ul>
-            </div>-->
             </form>
         </div>
     </div>
@@ -244,20 +234,6 @@
     <form class="form-signin" method="get" action="/logout">
         <button class="btn btn-primary btn-block" type="submit">Logout</button>
     </form>
-
-    <!--<form th:action="@{/block}"  th:object="${userObj}" method="POST">
-        <div class="field">
-            <button class="ui button" type="submit" value="lock" name="lock">Blokuj</button>
-            <button class="ui button" type="submit" value="activate" name="activate">Aktywuj</button>
-        </div>
-        <ul>
-            <li th:each="user: ${usersList}">
-                <div class="ui checkbox">
-                    <input type="checkbox" th:value="${user.id}" th:name="idChecked">
-                </div>
-            </li>
-        </ul>
-    </form>-->
 
 
 </div>
