--- a/src/main/resources/templates/registration_form.html
+++ b/src/main/resources/templates/registration_form.html
@@ -148,7 +148,7 @@
 
     function validatePassword(){
         if(password.value != confirm_password.value) {
-            confirm_password.setCustomValidity("Hasła nie są identyczne");
+            confirm_password.setCustomValidity("Passwords are not the same");
         } else {
             confirm_password.setCustomValidity('');
         }
